added routes for adding and getting specifications
