# app/docs/swagger.yaml
@@ -14,6 +14,16 @@ definitions:
         example: Bad Request
         type: string
     type: object
+  models.Specification:
+    additionalProperties: true
+    type: object
+  models.SpecificationsRequest:
+    properties:
+      specifications:
+        items:
+          $ref: '#/definitions/models.Specification'
+        type: array
+    type: object
 info:
   contact: {}
   description: This is the backend for the API Scout platform.
@@ -46,7 +56,38 @@ paths:
       summary: Search OpenAPI specifications
       tags:
       - search
-  /specifications/{id}:
+  /specification:
+    post:
+      consumes:
+      - application/json
+      description: Insert new OpenAPI specifications in the database.
+      parameters:
+      - description: New Specifications
+        in: body
+        name: specifications
+        required: true
+        schema:
+          $ref: '#/definitions/models.SpecificationsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+      summary: Insert OpenAPI specifications
+      tags:
+      - specification
+  /specification/{id}:
     get:
       consumes:
       - application/json
@@ -75,36 +116,6 @@ paths:
           schema:
             $ref: '#/definitions/models.HTTPError'
       summary: Get OpenAPI specification
-      tags:
-      - specification
-  /specifications/insert:
-    post:
-      consumes:
-      - application/json
-      description: Insert new OpenAPI specifications in the database.
-      parameters:
-      - description: Specification ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.HTTPError'
-      summary: Insert OpenAPI specifications
       tags:
       - specification
 swagger: "2.0"
