# app/internal/models/specifications.go
@@ -1,0 +1,7 @@
+package models
+
+type SpecificationsRequest struct {
+	Specifications []Specification
+}
+
+type Specification map[string]interface{}
